fixed authentication child division alignment issue

--- a/src/app/auth-component/auth-component.component.css
+++ b/src/app/auth-component/auth-component.component.css
@@ -10,6 +10,10 @@
   border: 2px solid red;
   position: relative;
   display: flex;
-  flex-wrap: wrap;
-  alignment: center;
+  text-align: center;
+}
+
+.child{
+  justify-content: center;
+  margin:auto;
 }
